# 5580-movie-recommendation-system

./: .env.example  .gitignore  README.md  chainlit.md  main.py  pyproject.toml  start.sh
.chainlit/: config.toml
api/: app.py  config.py  dependencies.py
api/models/: __init__.py  recommend.py
api/routers/: __init__.py  recommend.py
api/services/: __init__.py  recommender_service.py
docs/: detailed_implementation.md  main_branch_features.md
output/: eda_summary.txt  filtered_movie_ids.csv  matrix_summary.txt  movie_id_title_lookup.csv  ratings_matrix.csv  ratings_matrix_normalized.csv  recommendation_test_results.txt  test_report_core.txt  test_report_full.txt  test_report_invalid_edge.txt
src/: cli.py  client.py  config.py  etl_eda.py  item_similarity.py  ratings_matrix.py  recommender.py  semantic_matcher.py
tests/: conftest.py  test_recommender.py
