[project]
name = "a5-recommendation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.4",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "ty>=0.0.20",
]
