[project]
name = "a5-recommendation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.4",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "ty>=0.0.20",
    "uvicorn>=0.41.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
addopts = "-v --tb=short"
markers = [
    "core: core functionality tests",
    "invalid: invalid input handling tests",
    "edge: edge case tests",
    "assignment: assignment requirement validation tests",
]
